# PRScs

./: LICENSE  PRScs.py  README.md  gigrnd.py  mcmc_gtb.py  parse_genet.py  pyproject.toml
src/: PRScs.py  mcmc_gtb.py  parse_genet.py
test_data/: sumstats.txt  sumstats_se.txt  test.bim
