[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
PRScs = "PRScs:main"

[project]
name = "prscs"
version = "1.1.0"
authors = [
      {name = "Tian Ge", email="tge1@mgh.harvard.edu"},
]
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/getian107/PRScs"
Issues = "https://github.com/getian107/PRScs/issues"